test/resources/InvalidPrograms/test_8.lo
// bad test case
// Duplicate Classes
// Author: Aaron Wollman (Summer 2021)

class A(){
    void A(){
        {
            ;
        }
    }
}

class Main() {
    int main(){
        {
            return 1;
        }
    }
}

class A(){
    void A(){
        {;}
    }
}